tests/fsharp/typecheck/sigs/neg95.bsl

neg95.fs(16,22): error FS1113: The value 's2' was marked inline but its implementation makes use of an internal or private function which is not sufficiently accessible
